--- a/ui/startup_dialog.glade
+++ b/ui/startup_dialog.glade
@@ -42,7 +42,7 @@
           </packing>
         </child>
         <child>
-          <!-- n-columns=2 n-rows=25 -->
+          <!-- n-columns=2 n-rows=22 -->
           <object class="GtkGrid">
             <property name="visible">True</property>
             <property name="can-focus">False</property>
@@ -88,6 +88,23 @@
                     <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
+                  </packing>
+                </child>
+                <child>
+                  <object class="GtkRadioButton" id="custom-radiobutton">
+                    <property name="label" translatable="yes">custom</property>
+                    <property name="visible">True</property>
+                    <property name="can-focus">True</property>
+                    <property name="receives-default">False</property>
+                    <property name="tooltip-text" translatable="yes">Write full command in "Launcher Arguments".</property>
+                    <property name="active">True</property>
+                    <property name="draw-indicator">True</property>
+                    <property name="group">mpirun-radiobutton</property>
+                  </object>
+                  <packing>
+                    <property name="expand">False</property>
+                    <property name="fill">True</property>
+                    <property name="position">2</property>
                   </packing>
                 </child>
               </object>
@@ -158,7 +175,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">23</property>
+                <property name="top-attach">20</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -173,7 +190,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">22</property>
+                <property name="top-attach">19</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -183,7 +200,7 @@
                 <property name="can-focus">False</property>
                 <property name="tooltip-text" translatable="yes">Multiple spaces/tabs will be reduced to one space.</property>
                 <property name="halign">start</property>
-                <property name="label" translatable="yes">Add Launcher Arguments</property>
+                <property name="label" translatable="yes">Launcher Arguments</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
@@ -211,7 +228,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">24</property>
+                <property name="top-attach">21</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -224,7 +241,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">17</property>
+                <property name="top-attach">14</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -238,7 +255,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">9</property>
+                <property name="top-attach">6</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -251,7 +268,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">13</property>
+                <property name="top-attach">10</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -268,20 +285,6 @@
               </packing>
             </child>
             <child>
-              <object class="GtkSeparator">
-                <property name="height-request">4</property>
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="margin-top">5</property>
-                <property name="orientation">vertical</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">2</property>
-                <property name="width">2</property>
-              </packing>
-            </child>
-            <child>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
@@ -290,7 +293,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">10</property>
+                <property name="top-attach">7</property>
               </packing>
             </child>
             <child>
@@ -300,7 +303,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">10</property>
+                <property name="top-attach">7</property>
               </packing>
             </child>
             <child>
@@ -312,7 +315,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">12</property>
+                <property name="top-attach">9</property>
               </packing>
             </child>
             <child>
@@ -322,7 +325,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">12</property>
+                <property name="top-attach">9</property>
               </packing>
             </child>
             <child>
@@ -334,7 +337,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">18</property>
+                <property name="top-attach">15</property>
               </packing>
             </child>
             <child>
@@ -347,7 +350,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">18</property>
+                <property name="top-attach">15</property>
               </packing>
             </child>
             <child>
@@ -359,7 +362,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">19</property>
+                <property name="top-attach">16</property>
               </packing>
             </child>
             <child>
@@ -369,7 +372,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">19</property>
+                <property name="top-attach">16</property>
               </packing>
             </child>
             <child>
@@ -381,7 +384,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">14</property>
+                <property name="top-attach">11</property>
               </packing>
             </child>
             <child>
@@ -391,7 +394,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">14</property>
+                <property name="top-attach">11</property>
               </packing>
             </child>
             <child>
@@ -404,7 +407,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">16</property>
+                <property name="top-attach">13</property>
               </packing>
             </child>
             <child>
@@ -414,7 +417,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">16</property>
+                <property name="top-attach">13</property>
               </packing>
             </child>
             <child>
@@ -426,7 +429,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">20</property>
+                <property name="top-attach">17</property>
               </packing>
             </child>
             <child>
@@ -436,7 +439,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">20</property>
+                <property name="top-attach">17</property>
               </packing>
             </child>
             <child>
@@ -448,7 +451,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">21</property>
+                <property name="top-attach">18</property>
               </packing>
             </child>
             <child>
@@ -459,7 +462,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">21</property>
+                <property name="top-attach">18</property>
               </packing>
             </child>
             <child>
@@ -473,7 +476,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">5</property>
+                <property name="top-attach">2</property>
                 <property name="width">2</property>
               </packing>
             </child>
@@ -481,39 +484,12 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="tooltip-text" translatable="yes">This will invalidate all settings exept SSH.</property>
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Custom Launcher</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkCheckButton" id="launcher-checkbutton">
-                <property name="height-request">34</property>
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-                <property name="receives-default">False</property>
-                <property name="draw-indicator">True</property>
-              </object>
-              <packing>
-                <property name="left-attach">1</property>
-                <property name="top-attach">3</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="tooltip-text" translatable="yes">(Optional)</property>
                 <property name="halign">start</property>
                 <property name="label" translatable="yes">Processes per Node</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">7</property>
+                <property name="top-attach">4</property>
               </packing>
             </child>
             <child>
@@ -523,29 +499,6 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">7</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel">
-                <property name="visible">True</property>
-                <property name="can-focus">False</property>
-                <property name="tooltip-text" translatable="yes">"Number of Processes" must be set accordingly when used!</property>
-                <property name="halign">start</property>
-                <property name="label" translatable="yes">Launcher Command</property>
-              </object>
-              <packing>
-                <property name="left-attach">0</property>
-                <property name="top-attach">4</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkEntry" id="launcher-entry">
-                <property name="visible">True</property>
-                <property name="can-focus">True</property>
-              </object>
-              <packing>
-                <property name="left-attach">1</property>
                 <property name="top-attach">4</property>
               </packing>
             </child>
@@ -553,13 +506,12 @@
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="tooltip-text" translatable="yes">(Optional)</property>
                 <property name="halign">start</property>
                 <property name="label" translatable="yes">Number of Nodes</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">8</property>
+                <property name="top-attach">5</property>
               </packing>
             </child>
             <child>
@@ -569,20 +521,19 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">8</property>
+                <property name="top-attach">5</property>
               </packing>
             </child>
             <child>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
-                <property name="tooltip-text" translatable="yes">(Mandatory, even with custom launcher command.)</property>
                 <property name="halign">start</property>
                 <property name="label" translatable="yes">Number of Processes</property>
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">6</property>
+                <property name="top-attach">3</property>
               </packing>
             </child>
             <child>
@@ -592,7 +543,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">6</property>
+                <property name="top-attach">3</property>
               </packing>
             </child>
             <child>
@@ -605,7 +556,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">11</property>
+                <property name="top-attach">8</property>
               </packing>
             </child>
             <child>
@@ -618,7 +569,7 @@
               </object>
               <packing>
                 <property name="left-attach">1</property>
-                <property name="top-attach">15</property>
+                <property name="top-attach">12</property>
               </packing>
             </child>
             <child>
@@ -629,7 +580,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">11</property>
+                <property name="top-attach">8</property>
               </packing>
             </child>
             <child>
@@ -640,7 +591,7 @@
               </object>
               <packing>
                 <property name="left-attach">0</property>
-                <property name="top-attach">15</property>
+                <property name="top-attach">12</property>
               </packing>
             </child>
           </object>
