--- a/ui/window.glade
+++ b/ui/window.glade
@@ -79,7 +79,7 @@
                 <property name="spacing">10</property>
                 <child>
                   <object class="GtkButton" id="follow-process-button">
-                    <property name="label" translatable="yes">Following Process 0</property>
+                    <property name="label" translatable="yes">Following All Processes</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
                     <property name="receives-default">True</property>
