--- a/ui/window.glade
+++ b/ui/window.glade
@@ -304,34 +304,34 @@
             <property name="can-focus">False</property>
             <child>
               <object class="GtkBox" id="files-box">
-                <property name="height-request">200</property>
                 <property name="visible">True</property>
                 <property name="can-focus">False</property>
+                <property name="margin-start">10</property>
+                <property name="margin-end">10</property>
                 <child>
-                  <object class="GtkBox" id="files-canvas-box">
+                  <object class="GtkScrolledWindow" id="drawing-area-scrolled-window">
                     <property name="visible">True</property>
                     <property name="can-focus">False</property>
-                    <property name="margin-start">10</property>
                     <child>
                       <placeholder/>
                     </child>
                   </object>
                   <packing>
-                    <property name="expand">False</property>
+                    <property name="expand">True</property>
                     <property name="fill">True</property>
                     <property name="position">0</property>
                   </packing>
                 </child>
                 <child>
                   <object class="GtkNotebook" id="files-notebook">
+                    <property name="width-request">1200</property>
                     <property name="visible">True</property>
                     <property name="can-focus">True</property>
-                    <property name="margin-end">10</property>
                     <property name="scrollable">True</property>
                     <property name="enable-popup">True</property>
                   </object>
                   <packing>
-                    <property name="expand">True</property>
+                    <property name="expand">False</property>
                     <property name="fill">True</property>
                     <property name="position">1</property>
                   </packing>
@@ -345,6 +345,8 @@
               <object class="GtkScrolledWindow" id="overview-scrolled-window">
                 <property name="visible">True</property>
                 <property name="can-focus">True</property>
+                <property name="margin-start">10</property>
+                <property name="margin-end">10</property>
                 <child>
                   <object class="GtkViewport" id="overview-viewport">
                     <property name="visible">True</property>
@@ -354,8 +356,6 @@
                       <object class="GtkGrid" id="overview-grid">
                         <property name="visible">True</property>
                         <property name="can-focus">False</property>
-                        <property name="margin-start">10</property>
-                        <property name="margin-end">10</property>
                         <property name="row-spacing">10</property>
                         <property name="column-spacing">10</property>
                         <child>
@@ -470,12 +470,26 @@
                   </packing>
                 </child>
                 <child>
-                  <!-- n-columns=1 n-rows=1 -->
-                  <object class="GtkGrid" id="gdb-send-select-grid">
+                  <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
-                    <property name="can-focus">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="max-content-height">150</property>
+                    <property name="propagate-natural-height">True</property>
                     <child>
-                      <placeholder/>
+                      <object class="GtkViewport">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <child>
+                          <!-- n-columns=1 n-rows=1 -->
+                          <object class="GtkGrid" id="gdb-send-select-grid">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
                     </child>
                   </object>
                   <packing>
@@ -612,12 +626,26 @@
                   </packing>
                 </child>
                 <child>
-                  <!-- n-columns=1 n-rows=1 -->
-                  <object class="GtkGrid" id="target-send-select-grid">
+                  <object class="GtkScrolledWindow">
                     <property name="visible">True</property>
-                    <property name="can-focus">False</property>
+                    <property name="can-focus">True</property>
+                    <property name="max-content-height">150</property>
+                    <property name="propagate-natural-height">True</property>
                     <child>
-                      <placeholder/>
+                      <object class="GtkViewport">
+                        <property name="visible">True</property>
+                        <property name="can-focus">False</property>
+                        <child>
+                          <!-- n-columns=1 n-rows=1 -->
+                          <object class="GtkGrid" id="target-send-select-grid">
+                            <property name="visible">True</property>
+                            <property name="can-focus">False</property>
+                            <child>
+                              <placeholder/>
+                            </child>
+                          </object>
+                        </child>
+                      </object>
                     </child>
                   </object>
                   <packing>
